# Scrapper

./: CMakeLists.txt  Event.h  README.MD  config.toml  downloadTimerEvent.h  log.txt  main.cpp  parser.cpp  parser.h  securitiesManager.cpp  securitiesManager.h  service.cpp  service.h  tradingSystem.cpp  tradingSystem.h  webSocketConnectBase.h  webSocketConnection.cpp  webSocketConnection.h  webSocketsManager.cpp  webSocketsManager.h
